@@ -11,9 +11,39 @@
 
 <p>Oracle, for example, doesn't support FreeBSD, NetBSD or OpenBSD but by running the SQL Relay server components on a supported platform such as Linux and the SQL Relay client components on the BSD platform, the BSD machine can access the Oracle database.</p>
 
+<table cellpadding="10px">
+<tr>
+<td align="center">
 <img src="../images/proxying.png">
+</td>
+<td align="center">
+<a href="../images/freebsd-i386.png"><img src="../images/freebsd-i386-thumb.png"><br>FreeBSD i386</a><br>
+(<a href="http://www.freebsd.org">www.freebsd.org</a>)
+</td>
+<td align="center">
+<a href="../images/netbsd-i386.png"><img src="../images/netbsd-i386-thumb.png"><br>NetBSD i386</a><br>
+(<a href="http://www.netbsd.org">www.netbsd.org</a>)
+</td>
+<td align="center">
+<a href="../images/openbsd-i386.png"><img src="../images/openbsd-i386-thumb.png"><br>OpenBSD i386</a><br>
+(<a href="http://www.openbsd.org">www.openbsd.org</a>)
+</td>
+<td align="center">
+<a href="../images/arm-linux-uclibc.png"><img src="../images/arm-linux-uclibc-thumb.png"><br>uClibc/Linux ARM</a><br>
+(<a href="http://buildroot.uclibc.org">buildroot.uclibc.org</a>)
+</td>
+<td align="center">
+<a href="../images/haiku.png"><img src="../images/haiku-thumb.png"><br>Haiku</a><br>
+(<a href="http://www.haiku-os.org">www.haiku-os.org</a>)
+</td>
+<td align="center">
+<a href="../images/syllable.png"><img src="../images/syllable-thumb.png"><br>Syllable</a><br>
+(<a href="http://syllable.org">syllable.org</a>)
+</td>
+</tr>
+</table>
 
-<p>The SQL Relay client components can be built and run on most unix-like systems, independent of architecture, thus SQL Relay can provide access to databases from a wide variety of platforms not supported by the database vendor.</p>
+<p>The SQL Relay client components can be built and run on most unix-like systems, independent of architecture.  As such, SQL Relay can provide access to databases from a wide variety of platforms not supported by the database vendor.</p>
 
 </body>
 </html>
