@@ -1,4 +1,5 @@
 0.52 - sqlrsh has long reported the wrong version, fixed that
+	added csv support to sqlr-export and a -format xml|csv option
 
 0.51 - fixed minor perl DBI driver documentation issue
 	added support for oracle 12c
